--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   box-shadow: 0 0 0 0.2rem lightgray;
 }
 
-/* Product card */
+/* Product cards */
 .product-card {
   background-color: ghostwhite;
   border: 1px solid gray;
@@ -65,4 +65,44 @@
   border: 3px solid #000000;
   border-radius: 100%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Cart */
+.cart-card {
+  background-color: ghostwhite;
+  max-height: 220px;
+}
+
+.cart-buttons-container {
+  margin-top: 25px;
+  margin-bottom: 30px;
+}
+
+.cart-buttons {
+  max-width: 205px;
+  margin-bottom: 0px;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: gray;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  z-index: 1000;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0.5;
+}
+
+.scroll-to-top:hover {
+  opacity: 1;
 }
