--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,70 @@
 .scroll-to-top:hover {
   opacity: 1;
 }
+
+/* Expermintal */
+.product-card1 {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+.product-card1:hover {
+  transform: scale(1.05);
+}
+
+.product-brand-logo1 {
+  max-width: 150px;
+  height: auto;
+  margin: 10px 0;
+}
+
+.product-buttons1 {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+/* Price Styling */
+.product-price {
+  color: #28a745;
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.product-price::before {
+  content: "₪";
+  margin-right: 5px;
+}
+
+.product-discount {
+  text-decoration: line-through;
+  color: #dc3545;
+  font-weight: normal;
+  font-size: 1.2em;
+  margin-right: 10px;
+}
+
+.product-final-price {
+  color: #28a745;
+  font-weight: bold;
+  font-size: 1.6em;
+}
+
+/* Company Logos */
+.company-logo {
+  width: 50px;
+  height: auto;
+  margin: 0 5px;
+}
+
+.company-logos {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
