--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.black-link-text {
+  color: black;
+  text-decoration: none;
+}
+
 /* Header */
 .header-logo {
   border-right: thick solid #5e5e5e;
@@ -43,8 +48,23 @@
   background-color: ghostwhite;
   border: 1px solid gray;
   padding: 10px;
-  width: 350px;
+  width: 310px;
+  height: 100%;
+  /* min-height: 530px;
+  max-height: 530px; */
   margin-bottom: 50px;
+}
+
+.product-image {
+  height: 150px;
+  width: auto;
+  object-fit: "contain";
+}
+
+.price-text {
+  color: black;
+  font-weight: bold;
+  font-size: 1.3em;
 }
 
 .product-brand-logo {
@@ -52,10 +72,21 @@
   height: 50px;
 }
 
+.product-buttons-container {
+  position: absolute;
+  bottom: 10px; /* Stick the buttons at the bottom with a small gap */
+  left: 0;
+  right: 0;
+  padding: 10px;
+  text-align: center; /* Center the buttons horizontally */
+}
+
 .product-buttons {
-  align-self: center;
+  /* align-self: center;
   max-width: 150px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
+  max-width: 150px;
+  margin: 0 5px;
 }
 
 /* Profile */
@@ -75,6 +106,14 @@
 
 .cart-quantity-buttons {
   max-width: 30px;
+}
+
+.quantity-input-container {
+  width: 150px;
+}
+
+.quantity-input-container input {
+  text-align: center;
 }
 
 .cart-buttons-container {
