--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
   margin-top: -30px;
   margin-right: -10px;
   border-radius: 100%;
-  /* border: solid black 1px; */
   width: 17px;
   height: 17px;
   text-align: center;
@@ -62,7 +61,6 @@
 }
 
 .form-controls {
-  /* background-color: ghostwhite; */
   border-color: black;
   border-radius: 10px;
   border-width: 2px;
@@ -204,6 +202,14 @@
   /* margin-bottom: 50px; */
 }
 
+.wishlist-icon {
+  color: cadetblue;
+}
+
+.wishlist-icon:hover {
+  color: gold;
+}
+
 .product-image {
   height: 125px;
   width: auto;
@@ -333,11 +339,6 @@
   border-radius: 8px;
   padding: 15px;
   background-color: ghostwhite;
-}
-
-.cart-product-card {
-  background-color: ghostwhite;
-  max-height: 220px;
 }
 
 .cart-quantity-buttons {
