--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+}
+
+body {
+  /* background: linear-gradient(120deg, #000000, #e74d4d); */
+  background-color: #e3e7ec;
+  background-image: url("https://www.transparenttextures.com/patterns/white-diamond.png");
+  /* background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png"); */
+  background-repeat: repeat;
+  background-size: auto;
+  background-blend-mode: multiply;
 }
 
 .black-link-text {
@@ -14,6 +27,11 @@
 }
 
 /* Header */
+.header {
+  background-color: #e3e7ec;
+  border-bottom: solid 5px black;
+}
+
 .header-logo-container {
   border-right: thick solid #5e5e5e;
   cursor: pointer;
@@ -300,7 +318,7 @@
   border: 1px solid gray;
   padding: 5px;
   width: 100%;
-  height: 10p0x;
+  height: 320px;
   max-width: 150px;
   margin: 10px;
 }
