--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,30 @@
 
 body {
   /* background: linear-gradient(120deg, #000000, #e74d4d); */
-  background-color: #e3e7ec;
+  background-color: #c7d3e0;
   background-image: url("https://www.transparenttextures.com/patterns/white-diamond.png");
   /* background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png"); */
   background-repeat: repeat;
   background-size: auto;
   background-blend-mode: multiply;
+}
+
+@media print {
+  .hide-on-print {
+    display: none !important;
+  }
+
+  .row-print-flex {
+    display: flex !important;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+  }
+
+  .col-print-flex {
+    flex: 1;
+    padding: 0 10px;
+  }
 }
 
 .black-link-text {
@@ -24,6 +42,16 @@ body {
   max-width: 1300px;
   width: 100%;
   margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.custom-button {
+  margin: 10px;
+  border-radius: 15px;
+}
+
+.custom-divider {
+  border-left: 2px solid #ccc;
 }
 
 /* Header */
@@ -55,8 +83,23 @@ body {
   color: darkgreen;
 }
 
+/* Error 404 page */
+.error-404-image {
+  width: 300px;
+  height: auto;
+}
+
+/* Home Page */
+/* Ad Carousel */
+.ad-carousel-item img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-bottom: solid 4px black;
+}
+
 /* Featured products carousel */
-.featured-carousel {
+/* .featured-carousel {
   max-width: 500px;
   max-height: 350px;
   margin: 0 auto;
@@ -71,7 +114,7 @@ body {
   background-color: black;
   border-radius: 50%;
   padding: 10px;
-}
+} */
 
 /* Forms */
 .custom-form-group {
@@ -169,19 +212,20 @@ body {
   background-color: ghostwhite;
   border-radius: 10px;
   padding: 15px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
-  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s, box-shadow 0.3s;
+  /* text-align: center; */
 }
 
 .category-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 }
 
 .category-card-img {
   max-width: 45%;
   height: 100px;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -189,8 +233,8 @@ body {
   background-color: ghostwhite;
   border-radius: 10px;
   padding: 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s, box-shadow 0.3s;
   text-align: center;
   width: 130px;
   height: 100px;
@@ -198,12 +242,13 @@ body {
 
 .small-category-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
 }
 
 .small-category-card-img {
   max-width: 45%;
   height: 50px;
+  margin-top: 5px;
   margin-bottom: 3px;
 }
 
@@ -218,6 +263,17 @@ body {
   /* min-height: 530px;
   max-height: 530px; */
   /* margin-bottom: 50px; */
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+}
+
+.edit-product-card {
+  background-color: ghostwhite;
+  border: 2px solid gray;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  max-width: 450px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
 
 .wishlist-icon {
@@ -242,7 +298,7 @@ body {
 }
 
 .small-product-image {
-  height: 80px;
+  height: 70px;
   width: auto;
   object-fit: cover;
   margin-top: 10px;
@@ -319,8 +375,10 @@ body {
   padding: 5px;
   width: 100%;
   height: 320px;
+  min-width: 100px;
   max-width: 150px;
   margin: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 .small-product-title {
@@ -453,6 +511,7 @@ body {
   border-radius: 8px;
   padding: 15px;
   background-color: ghostwhite;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .cart-quantity-buttons {
