Updated user and products management pages. Small user authentication imporvement (saving user data) and css imporments

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,11 @@ body {
   border-left: 2px solid #ccc;
 }
 
+.thick-hr {
+  height: 5px;
+  background-color: black;
+}
+
 /* Header */
 .header {
   background-color: #e3e7ec;
