--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,14 @@ body {
   margin-bottom: 20px;
 }
 
+.custom-card {
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: ghostwhite;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+
 .custom-button {
   margin: 10px;
   border-radius: 15px;
