--- a/src/App.css
+++ b/src/App.css
@@ -416,6 +416,12 @@ body {
 .product-images-container {
   border-right: thick solid #5e5e5e;
 }
+/* Hiding the image container border when window is 767px or smaller */
+@media (max-width: 767px) {
+  .product-images-container {
+    border-right: none;
+  }
+}
 
 /* .swiper {
   width: 80%;
